# obsidian-ocr

./: .env.example  .gitignore  README.md  REQUIRMENTS.md  pyproject.toml  requirements.txt
obsidian_ocr/: __init__.py  cli.py  config.py  lmstudio.py  migrate.py  pdf.py  sidecar.py  walker.py
tests/: test_obsidian_ocr.py
